--- a/src/style.css
+++ b/src/style.css
@@ -231,7 +231,7 @@
   .contacter {
     bottom: 20px;
     float: none;
-     height: 100vh;
+    height: 100vh;
     width: 100%;
     position: fixed;
     padding: 10px 30px;
@@ -246,7 +246,8 @@
     width: 100%;
     margin: 5px 0;
     border-radius: 5px;
-    border: 0.5px solid rgb(90, 90, 90);
+    box-shadow: none;
+    border: 0.5px solid rgb(199, 199, 199);
   }
   .showForm {
     height: 90vh;
