--- a/src/style.css
+++ b/src/style.css
@@ -111,7 +111,7 @@
 /* About */
 
 /* Contact page  */
-.contacter {
+.hanlder {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -120,14 +120,20 @@
   height: 100vh;
   padding: 0 70px 0 30px;
   background-color: white;
-  float: right;
-  /* color: white;
-  background: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
-  border-radius: 0 20px 20px 0;
-  border: 1px solid rgba(255, 255, 255, 0.18); */
+  float: left;
+  position: fixed;
+}
+.contacter {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  width: 40%;
+  height: 100vh;
+  padding: 0 70px 0 30px;
+  background-color: white;
+  float: left;
 }
 .imager {
   width: 100%;
@@ -147,6 +153,30 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
+.clickBtn {
+  display: block;
+  cursor: pointer;
+  color: blue;
+  font-weight: 600;
+  font-size: 24px;
+  text-transform: lowercase;
+}
+.form {
+  transition: ease-in;
+  transition-duration: 2s;
+}
+.hideMe {
+  display: none;
+}
+.goback {
+  width: 100%;
+  margin-top: 15px;
+  font-size: 19px;
+  cursor: pointer;
+  text-transform: capitalize;
+  color: blue;
+}
+
 /* Contact page  */
 @media screen and (max-width: 768px) {
   /* Navbar  */
@@ -228,6 +258,16 @@
   /* Home  */
 
   /* Contact  */
+  .hanlder {
+    bottom: 20px;
+    float: none;
+    height: 38vh;
+    width: 100%;
+    position: fixed;
+    padding: 0px 30px;
+    justify-content: center;
+    border-radius: 30px 30px 0 0;
+  }
   .contacter {
     bottom: 20px;
     float: none;
@@ -247,7 +287,7 @@
     margin: 5px 0;
     border-radius: 5px;
     box-shadow: none;
-    border: 0.5px solid rgb(199, 199, 199);
+    border: 0.5px solid rgb(148, 148, 148);
   }
   .showForm {
     height: 90vh;
@@ -255,6 +295,18 @@
     position: fixed;
     padding: 10px 30px;
     border-radius: 30px 30px 0 0;
+  }
+  .goback {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    text-transform: capitalize;
+    color: blue;
   }
 
   /* Contact  */
