completed contact page

--- a/src/style.css
+++ b/src/style.css
@@ -150,8 +150,7 @@
   width: 100%;
   margin: 5px 0;
   border-radius: 5px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border: 1px solid grey;
 }
 .clickBtn {
   display: block;
@@ -169,12 +168,21 @@
   display: none;
 }
 .goback {
-  width: 100%;
-  margin-top: 15px;
+  display: flex;
+  align-items: left;
+  justify-content: left;
   font-size: 19px;
   cursor: pointer;
   text-transform: capitalize;
-  color: blue;
+  color: rgb(135, 135, 255);
+  margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+}
+.linkerr {
+  text-decoration: none;
+  margin-top: 25px;
+  padding-top: 10px;
 }
 
 /* Contact page  */
@@ -306,7 +314,6 @@
     font-size: 16px;
     cursor: pointer;
     text-transform: capitalize;
-    color: blue;
   }
 
   /* Contact  */
