--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   height: 12vh;
-  padding: 0 20px;
+  padding: 0 50px;
   z-index: 9;
   position: fixed;
   width: 100%;
@@ -12,7 +12,12 @@
 }
 
 .header-bg {
-  background-color: rgb(0, 0, 0, 0.9);
+  background: rgba(221, 221, 221, 0.35);
+  box-shadow: 0 2px 2px 0 rgba(233, 233, 233, 0.37);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 0 0 10px 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 .header-fbg {
   color: black;
@@ -20,14 +25,15 @@
 .logoName {
   font-size: 30px;
   margin: 0;
+  color: #000000;
+  display: none;
 }
 .listUl {
   display: flex;
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
-  gap: 40px;
-  margin-right: 15px;
+  gap: 55px;
   margin: 0;
 }
 
@@ -38,14 +44,14 @@
   justify-content: center;
   text-decoration: none;
   font-weight: 400;
-  color: white;
+  color: rgb(39, 39, 39);
 }
 .iconer {
   display: none;
 }
 .active .linker {
-  background-color: #ffffff;
-  color: #b5816b;
+  background-color: #b5816b;
+  color: #ffffff;
   padding: 5px 15px;
   border-radius: 5px;
   text-decoration: none;
@@ -112,10 +118,88 @@
 /* HOME */
 
 /* About */
-.Abouter {
-  background-color: black;
-  height: 100vh;
+.aboutHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 95vh;
 }
+.aImg {
+  width: 100%;
+}
+.aImager {
+  width: 100%;
+  height: 100%;
+}
+.aText {
+  width: 100%;
+}
+.aSpanner {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 0;
+}
+.aHeading {
+  font-weight: 700;
+  font-size: 60px;
+  text-transform: lowercase;
+}
+.aparagraph {
+  font-size: 22px;
+}
+
+/* Education  */
+.education {
+  height: 50vh;
+}
+.educationSection {
+  margin-top: 40px;
+}
+.eduContent {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 5px;
+  background: rgba(236, 236, 236, 0.35);
+  /* box-shadow: 0 2px 2px 0 rgba(233, 233, 233, 0.37); */
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;  height: 17vh;
+}
+.eflexer {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 20px;
+}
+.eimger {
+  height: 100%;
+  width: 29%;
+  object-fit: contain;
+}
+.eimg {
+  object-fit: fill;
+  border-radius: 10px 0 0 10px;
+  height: 100%;
+  width: 100%;
+}
+.etext {
+  padding: 10px;
+}
+.degree {
+  font-size: 16px;
+  margin-top: 4px;
+  margin-bottom: 1px;
+}
+.flex {
+  font-size: 12px;
+  margin: 0;
+}
+/* Education  */
 /* About */
 
 /* Contact page  */
@@ -202,11 +286,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 12vh;
+    height: 0;
     padding: 0 20px;
     z-index: 9;
     width: 100%;
     color: white;
+    position: relative;
+    bottom: 0;
   }
   .list {
     width: 100%;
@@ -219,6 +305,7 @@
     align-items: center;
     list-style-type: none;
     gap: 20px;
+    z-index: 9;
     margin-right: 0;
     background-color: white;
     padding: 20px 0;
@@ -226,10 +313,23 @@
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
       rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   }
+  .header-bg {
+    position: fixed;
+    z-index: 9;
+    height: 10vh;
+    padding: 0px;
+    z-index: 9;
+    width: 100%;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.35);
+    box-shadow: none;
+    border: none;
+  }
   .linker {
     color: black;
     font-size: 15px;
     font-weight: 400;
+    z-index: 9;
   }
   .iconer {
     display: block;
@@ -289,7 +389,90 @@
     width: 100%;
   }
   /* Home  */
-
+  /* About  */
+  .Abouter {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10vh;
+  }
+  .aboutHeader {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 50px;
+    height: 100vh;
+  }
+  .aImg {
+    width: 100%;
+  }
+  .aImager {
+    width: 100%;
+    height: 100%;
+  }
+  .aText {
+    width: 100%;
+    text-align: center;
+  }
+  .aSpanner {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+  }
+  .aHeading {
+    font-weight: 700;
+    font-size: 45px;
+    text-transform: lowercase;
+  }
+  .aparagraph {
+    font-size: 18px;
+  }
+  /* Education  */
+  .education {
+    height: auto;
+    margin-bottom: 100px;
+  }
+  .educationSection {
+    margin-top: 10px;
+  }
+  .eduContent {
+    gap: 5px;
+    height: 15vh;
+  }
+  .eflexer {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 20px;
+  }
+  .eimger {
+    height: 100%;
+    width: 29%;
+    object-fit: contain;
+  }
+  .eimg {
+    object-fit: fill;
+    border-radius: 10px 0 0 10px;
+    height: 100%;
+    width: 100%;
+  }
+  .etext {
+    padding: 10px;
+  }
+  .degree {
+    font-size: 16px;
+    margin-top: 4px;
+    margin-bottom: 1px;
+  }
+  .flex {
+    font-size: 12px;
+    margin: 0;
+  }
+  /* Education  */
+  /* About  */
   /* Contact  */
   .hanlder {
     bottom: 20px;
