--- a/src/style.css
+++ b/src/style.css
@@ -168,7 +168,9 @@
   -webkit-backdrop-filter: blur(20px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;  height: 17vh;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  height: 17vh;
 }
 .eflexer {
   display: flex;
@@ -182,7 +184,7 @@ box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 
   object-fit: contain;
 }
 .eimg {
-  object-fit: fill;
+  object-fit: cover;
   border-radius: 10px 0 0 10px;
   height: 100%;
   width: 100%;
@@ -200,6 +202,49 @@ box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 
   margin: 0;
 }
 /* Education  */
+
+/* Internships  */
+.Internships {
+  height: 90vh;
+  margin-bottom: 50px;
+}
+.iContent {
+  background-color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 20px;
+  padding: 20px;
+}
+.iflexer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+.iImager {
+  width: 100%;
+  height: 30vh;
+  margin-bottom: 1rem;
+}
+.iImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+/* Internships  */
+
+/* CEmployer  */
+.cEmplyer {
+  height: 105vh;
+}
+.cimg {
+  width: 100%;
+  height: 50vh;
+  margin-bottom: 1rem;
+}
+
+/* CEmployer  */
+
 /* About */
 
 /* Contact page  */
@@ -433,7 +478,7 @@ box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 
   /* Education  */
   .education {
     height: auto;
-    margin-bottom: 100px;
+    margin-bottom: 40px;
   }
   .educationSection {
     margin-top: 10px;
@@ -471,6 +516,24 @@ box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 
     font-size: 12px;
     margin: 0;
   }
+  /* Internships  */
+  .Internships {
+    height: auto;
+    margin-bottom: 40px;
+  }
+  /* Internships  */
+  /* CEmployer  */
+  .cEmplyer {
+    height: auto;
+    margin-bottom: 15vh;
+  }
+  .cimg {
+    width: 100%;
+    height: 30vh;
+    margin-bottom: 1rem;
+  }
+
+  /* CEmployer  */
   /* Education  */
   /* About  */
   /* Contact  */
