--- a/src/style.css
+++ b/src/style.css
@@ -456,6 +456,7 @@
     width: 100%;
     height: 100%;
   }
+
   .aText {
     width: 100%;
     text-align: center;
@@ -495,7 +496,7 @@
   }
   .eimger {
     height: 100%;
-    width: 29%;
+    width: 35%;
     object-fit: contain;
   }
   .eimg {
@@ -521,6 +522,26 @@
     height: auto;
     margin-bottom: 40px;
   }
+  .iContent {
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 20px;
+    padding: 20px 10px;
+  }
+  .time {
+    font-size: 10px;
+  }
+  .iImager {
+    width: 100%;
+    height: 24vh;
+    margin-bottom: 1rem;
+  }
+  .iImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+  }
   /* Internships  */
   /* CEmployer  */
   .cEmplyer {
@@ -529,7 +550,7 @@
   }
   .cimg {
     width: 100%;
-    height: 30vh;
+    height: 24vh;
     margin-bottom: 1rem;
   }
 
