--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+.d {
+  width: 100%;
+  height: 100vh;
+  background-color: teal;
+}
+
 /* Navbar */
 .navbarRoot {
   display: flex;
@@ -315,10 +321,73 @@
   padding: 0;
 }
 
-.quote {
-  display: none;
+.pSection {
+  margin-top: 2vh;
 }
 
+.pContanier {
+  padding: 5px;
+}
+.pContent {
+  margin-top: 5px;
+  padding: 10px 10px;
+  display: flex;
+  height: 50vh;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(197, 197, 197, 0.37);
+  backdrop-filter: blur(6.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(184, 184, 184, 0.18);
+}
+
+.pImager {
+  width: 100%;
+  height: 38vh;
+  position: relative;
+  margin-bottom: 0px;
+  filter: grayscale(50%);
+}
+.pImager:hover {
+  filter: grayscale(0%);
+}
+.pimgs {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.ptitler {
+  position: absolute;
+  display: flex;
+  align-items: end;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.ptitle {
+  background-color: #ffffff;
+  width: 100%;
+  padding: 10px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.bttn {
+  margin-bottom: 10px;
+  width: 100%;
+  height: 7.5vh;
+  text-transform: uppercase;
+  background-color: #a1938d;
+  border: none;
+  color: white;
+  border-radius: 5px;
+}
+.bttn:hover {
+  background-color: #b5816b;
+}
 /* projects  */
 
 /* Contact page  */
@@ -638,11 +707,13 @@
   /* Technology  */
   .exp {
     width: 100%;
-    height: 40vh;
+    height: 32vh;
+    top: 10px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 40px;
+    justify-content: flex-start;
+    margin-bottom: 0px;
+    margin-top: 7vh;
+    padding: 0;
   }
   .tContent {
     margin-top: 24px;
@@ -650,6 +721,7 @@
   }
   .tech {
     font-size: 28px;
+    padding-right: 20px;
   }
   .subtech {
     font-size: 12px;
@@ -663,6 +735,73 @@
     font-size: 15px;
   }
   /* Technology  */
+
+  /* Projects  */
+  .pContanier {
+    padding: 5px;
+  }
+  .pContent {
+    margin-top: 0px;
+    padding: 5px 5px;
+    display: flex;
+    height: 33vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(197, 197, 197, 0.37);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
+  .pImager {
+    width: 100%;
+    height: 30vh;
+    position: relative;
+    margin-bottom: 0px;
+    filter: grayscale(50%);
+  }
+  .pImager:hover {
+    filter: grayscale(0%);
+  }
+  .pimgs {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  }
+
+  .ptitler {
+    position: absolute;
+    display: flex;
+    align-items: end;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+  .ptitle {
+    background-color: #ffffff;
+    width: 100%;
+    padding: 8px;
+    font-weight: 500;
+    font-size: 10px;
+    text-transform: uppercase;
+  }
+  .bttn {
+    height: 5vh;
+    text-transform: uppercase;
+    background-color: #a1938d;
+    color: white;
+    border-radius: 3px;
+    font-size: 12px;
+    margin-bottom: 0;
+  }
+  .bttn:hover {
+    background-color: #b5816b;
+  }
+  /* Projects  */
 
   /* Contact  */
   .hanlder {
