--- a/src/style.css
+++ b/src/style.css
@@ -378,6 +378,22 @@
   justify-content: center;
   text-transform: uppercase;
 }
+.btn-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.btnss {
+  width: 200px;
+  height: 2.5rem;
+  border: none;
+  border-radius: 5px;
+}
+.btnss:hover {
+  background-color: #b5816b;
+  color: white;
+}
+
 .bttn {
   margin-bottom: 10px;
   width: 100%;
@@ -411,6 +427,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 50px;
+  height: 70vh;
 }
 .mImage {
   width: 100%;
@@ -443,8 +460,6 @@
 .pbtn {
   background-color: blue;
   color: white;
-}
-.sbtn {
 }
 
 .mContent {
@@ -631,18 +646,19 @@
   .innerText {
     margin-bottom: 40px;
     width: 1000px;
-    height: 50vh;
+    height: 46vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     padding: 30px 50px;
-    background: rgba(255, 255, 255, 0.35);
-    box-shadow: 0 2px 2px 0 rgba(219, 219, 219, 0.37);
+    background-color: rgb(251, 251, 251);
+    /* box-shadow: 0 2px 2px 0 rgba(219, 219, 219, 0.37);
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
     border-radius: 40px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border: 1px solid rgba(255, 255, 255, 0.18); */
+    border-radius: 40px;
   }
   .homeHeading {
     font-weight: 600;
@@ -822,6 +838,9 @@
   /* Technology  */
 
   /* Projects  */
+  .pSection {
+    margin-bottom: 14vh;
+  }
   .pContanier {
     padding: 5px;
   }
@@ -886,6 +905,22 @@
     background-color: #b5816b;
   }
 
+  .btn-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  .btnss {
+    width: 140px;
+    height: 2rem;
+    font-size: 12px;
+    border: none;
+    border-radius: 5px;
+  }
+  .btnss:hover {
+    background-color: #b5816b;
+    color: white;
+  }
   /* Details  */
   .details {
     padding-top: 5vh;
@@ -904,11 +939,11 @@
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20vh;
+    margin-bottom: 15vh;
   }
   .mImage {
     width: 100%;
-    height: 30vh;
+    height: 25vh;
     margin-bottom: 1rem;
     object-fit: contain;
   }
@@ -930,14 +965,14 @@
     background-color: rgb(255, 255, 255);
     position: relative;
     padding: 10px 20px;
-    height: 65vh;
+    height: 69vh;
     border-radius: 10px;
   }
   .sidebar {
     position: absolute;
     width: 93%;
     background-color: rgb(253, 253, 253);
-    height: 72vh;
+    height: 69vh;
     padding: 30px 20px;
     border-radius: 10px;
   }
@@ -951,6 +986,7 @@
   .iconerr {
     display: inline-block;
     color: blue;
+    font-size: 12px;
   }
 
   /* Details  */
