--- a/src/style.css
+++ b/src/style.css
@@ -382,6 +382,7 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  margin-bottom: 1rem;
 }
 .btnss {
   width: 200px;
@@ -399,7 +400,7 @@
   width: 100%;
   height: 7.5vh;
   text-transform: uppercase;
-  background-color: #a1938d;
+  background-color: #bfa397;
   border: none;
   color: white;
   border-radius: 5px;
@@ -818,7 +819,7 @@
   }
   .tContent {
     margin-top: 24px;
-    height: 10vh;
+    height: 8.5vh;
   }
   .tech {
     font-size: 28px;
@@ -895,7 +896,7 @@
   .bttn {
     height: 4.5vh;
     text-transform: uppercase;
-    background-color: #a1938d;
+    background-color: #bfa397;
     color: white;
     border-radius: 3px;
     font-size: 12px;
@@ -929,22 +930,26 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 0px;
   }
   .pdTitle {
     font-weight: 700;
     text-transform: uppercase;
+    font-size: 25px;
   }
   .mFlexer {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 15vh;
+    height: 100%;
+    margin-bottom: 11vh;
   }
   .mImage {
     width: 100%;
-    height: 25vh;
-    margin-bottom: 1rem;
+    height: 24vh;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     object-fit: contain;
   }
   .mimg {
@@ -955,7 +960,7 @@
   }
   .bt {
     width: 100%;
-    height: 2.8rem;
+    height: 2.3rem;
     border: none;
     border-radius: 5px;
     text-transform: uppercase;
@@ -965,15 +970,15 @@
     background-color: rgb(255, 255, 255);
     position: relative;
     padding: 10px 20px;
-    height: 69vh;
+    height: auto;
     border-radius: 10px;
   }
   .sidebar {
     position: absolute;
     width: 93%;
     background-color: rgb(253, 253, 253);
-    height: 69vh;
-    padding: 30px 20px;
+    height: auto;
+    padding: 10px 20px;
     border-radius: 10px;
   }
 
@@ -987,6 +992,8 @@
     display: inline-block;
     color: blue;
     font-size: 12px;
+    width: 30%;
+    text-align: right;
   }
 
   /* Details  */
